tests/baselines/reference/nonTsxExtensionOpeningClosingTag.errors.txt
nonTsxExtensionOpeningClosingTag.ts(2,24): error TS1465: JSX tags are not permitted in '.ts' files. Did you mean for the file extension to be '.tsx'?
nonTsxExtensionOpeningClosingTag.ts(2,25): error TS2304: Cannot find name 'span'.
nonTsxExtensionOpeningClosingTag.ts(2,30): error TS2304: Cannot find name 'yippee'.
nonTsxExtensionOpeningClosingTag.ts(2,38): error TS2304: Cannot find name 'span'.


==== nonTsxExtensionOpeningClosingTag.ts (4 errors) ====
    console.log("before");
    export const _ = () => <span>yippee</span>;
                           ~~~~~~~~~~~~~~~~~~~
!!! error TS1465: JSX tags are not permitted in '.ts' files. Did you mean for the file extension to be '.tsx'?
                            ~~~~
!!! error TS2304: Cannot find name 'span'.
                                 ~~~~~~
!!! error TS2304: Cannot find name 'yippee'.
                                         ~~~~
!!! error TS2304: Cannot find name 'span'.
    console.log("after");
    